--- a/style.css
+++ b/style.css
@@ -123,3 +123,28 @@ p {
         border-width: 10px 0 10px 20px;
     }
 }
+
+.video-responsive {
+  position: relative;
+  width: 100%;
+  max-width: 100%;
+  border-radius: 15px;
+  overflow: hidden;
+  box-shadow: 0 20px 25px -5px rgba(0, 0, 0, 0.1), 0 10px 10px -5px rgba(0, 0, 0, 0.04);
+}
+
+.video-responsive::before {
+  content: "";
+  display: block;
+  padding-top: 56.25%; /* для соотношения 16:9 */
+}
+
+.video-responsive iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  border: 0;
+  border-radius: 15px;
+}
