--- a/style.css
+++ b/style.css
@@ -44,15 +44,18 @@ p {
 .video-container {
     position: relative;
     width: 100%;
-    max-width: 100%;
+    aspect-ratio: 3/2;
     border-radius: 15px;
+    overflow: hidden;
     box-shadow: 0 20px 25px -5px rgba(0, 0, 0, 0.1), 0 10px 10px -5px rgba(0, 0, 0, 0.04);
 }
 
 .video-frame {
-    aspect-ratio: 3/2;
+    position: absolute;
+    top: 0;
+    left: 0;
     width: 100%;
-    height: auto;
+    height: 100%;
     border-radius: 15px;
 }
 
@@ -69,9 +72,5 @@ p {
     
     .video-frame {
         border-radius: 0;
-        width: 100vw;
-        max-width: 100vw;
-        margin-left: -1rem;
-        margin-right: -1rem;
     }
 }
